{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 955,
  "lineage": "91e36b4e-51e3-8c8b-80b0-44e913f72d64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "API-ELB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:033849033336:loadbalancer/API-ELB",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "API-ELB-1893006965.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/api/status",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "API-ELB",
            "idle_timeout": 60,
            "instances": [
              "i-0def2efefdab0f156"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "tcp",
                "lb_port": 443,
                "lb_protocol": "tcp"
              },
              {
                "instance_port": 80,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              }
            ],
            "name": "API-ELB",
            "security_groups": [
              "sg-01c0d25fdc49e86da"
            ],
            "source_security_group": "033849033336/node-api-lb",
            "source_security_group_id": "sg-01c0d25fdc49e86da",
            "subnets": [
              "subnet-01af73e5aeba4c269",
              "subnet-02b071b398e546359",
              "subnet-07521f505679f7e66"
            ],
            "tags": {
              "Name": "API-ELB",
              "task": "toptal"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.node-api-lb",
            "aws_subnet.Public-1",
            "aws_subnet.Public-2",
            "aws_subnet.Public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "WEB-ELB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:033849033336:loadbalancer/WEB-ELB",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "WEB-ELB-1549697459.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "WEB-ELB",
            "idle_timeout": 60,
            "instances": [
              "i-07e3ebb32c2758270"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "tcp",
                "lb_port": 443,
                "lb_protocol": "tcp"
              },
              {
                "instance_port": 80,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              }
            ],
            "name": "WEB-ELB",
            "security_groups": [
              "sg-01e0b5d3b92f31a56"
            ],
            "source_security_group": "033849033336/node-web-lb",
            "source_security_group_id": "sg-01e0b5d3b92f31a56",
            "subnets": [
              "subnet-01af73e5aeba4c269",
              "subnet-02b071b398e546359",
              "subnet-07521f505679f7e66"
            ],
            "tags": {
              "Name": "WEB-ELB"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.node-web-lb",
            "aws_subnet.Public-1",
            "aws_subnet.Public-2",
            "aws_subnet.Public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f3b9c7d1c9936e7d",
            "owner_id": "033849033336",
            "tags": {
              "task": "toptal"
            },
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d8a50a7494faf151",
            "owner_id": "033849033336",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3b9c7d1c9936e7d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cedfc7d7336ae70",
            "route_table_id": "rtb-0d8a50a7494faf151",
            "subnet_id": "subnet-07521f505679f7e66"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main-public",
            "aws_subnet.Public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06553eab4a9adb1ad",
            "route_table_id": "rtb-0d8a50a7494faf151",
            "subnet_id": "subnet-02b071b398e546359"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main-public",
            "aws_subnet.Public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a57bd297d378e705",
            "route_table_id": "rtb-0d8a50a7494faf151",
            "subnet_id": "subnet-01af73e5aeba4c269"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main-public",
            "aws_subnet.Public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:security-group/sg-0fd8bdd1891a69062",
            "description": "Allow Postgres Connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd8bdd1891a69062",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "RDS-sg",
            "name_prefix": null,
            "owner_id": "033849033336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-sg",
              "task": "toptal"
            },
            "timeouts": null,
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node-api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:security-group/sg-005a9de5fd15de1d0",
            "description": "Allow HTTP \u0026 HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005a9de5fd15de1d0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-01c0d25fdc49e86da"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "node-api",
            "name_prefix": null,
            "owner_id": "033849033336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-api",
              "task": "toptal"
            },
            "timeouts": null,
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_security_group.node-api-lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node-api-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:security-group/sg-01c0d25fdc49e86da",
            "description": "Allow HTTP \u0026 HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c0d25fdc49e86da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node-api-lb",
            "name_prefix": null,
            "owner_id": "033849033336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-api-lb",
              "task": "toptal"
            },
            "timeouts": null,
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:security-group/sg-08c0aec53b1e30687",
            "description": "Allow HTTP \u0026 HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c0aec53b1e30687",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-01e0b5d3b92f31a56"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "node-web",
            "name_prefix": null,
            "owner_id": "033849033336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-web",
              "task": "toptal"
            },
            "timeouts": null,
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_security_group.node-web-lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node-web-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:security-group/sg-01e0b5d3b92f31a56",
            "description": "Allow HTTP \u0026 HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e0b5d3b92f31a56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node-web-lb",
            "name_prefix": null,
            "owner_id": "033849033336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-web-lb",
              "task": "toptal"
            },
            "timeouts": null,
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:subnet/subnet-000d167f489ec20fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-000d167f489ec20fc",
            "map_public_ip_on_launch": false,
            "owner_id": "033849033336",
            "tags": {
              "Name": "Private-Subnet-1",
              "task": "toptal"
            },
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:subnet/subnet-01c12b3be548d6737",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-01c12b3be548d6737",
            "map_public_ip_on_launch": false,
            "owner_id": "033849033336",
            "tags": {
              "Name": "Private-Subnet-2",
              "task": "toptal"
            },
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:subnet/subnet-0600fff9eb11b825a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0600fff9eb11b825a",
            "map_public_ip_on_launch": false,
            "owner_id": "033849033336",
            "tags": {
              "Name": "Private-Subnet-3",
              "task": "toptal"
            },
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:subnet/subnet-07521f505679f7e66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07521f505679f7e66",
            "map_public_ip_on_launch": true,
            "owner_id": "033849033336",
            "tags": {
              "Name": "Public-Subnet-1",
              "task": "toptal"
            },
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:subnet/subnet-02b071b398e546359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02b071b398e546359",
            "map_public_ip_on_launch": true,
            "owner_id": "033849033336",
            "tags": {
              "Name": "Public-Subnet-2",
              "task": "toptal"
            },
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:subnet/subnet-01af73e5aeba4c269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01af73e5aeba4c269",
            "map_public_ip_on_launch": true,
            "owner_id": "033849033336",
            "tags": {
              "Name": "Public-Subnet-3",
              "task": "toptal"
            },
            "vpc_id": "vpc-01adf5e0602de8e67"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:033849033336:vpc/vpc-01adf5e0602de8e67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0728c2dc64323855a",
            "default_route_table_id": "rtb-0a3f810410139ce8a",
            "default_security_group_id": "sg-0a7c173c65e4b2270",
            "dhcp_options_id": "dopt-ab13d3c0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01adf5e0602de8e67",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a3f810410139ce8a",
            "owner_id": "033849033336",
            "tags": {
              "task": "toptal"
            }
          }
        }
      ]
    }
  ]
}